[package]
name = "array-helpers"
version = "0.0.1" # remember to update html_root_url
authors = ["fine-geometer"]
edition = "2018"
description = "Basic length-generic operations on arrays."
license = "MIT OR Apache-2.0"
# repository = ""
readme = "./README.md"
keywords = ["array", "initialize", "length", "const", "generics"]
categories = ["data-structures", "memory-management", "no-std", "rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = ["std"]
std = []

[dependencies]
